#Change log

7/2/17

Removed known "gotchas" from previous build of the block.

Full refactor and couple of class renames

constants properly defined

Images can be either CSS backgrounds or img tagged

lassed out the images returned regardless of the embedded situation

8/2/17

Added functionality for course descriptions and truncation

Began adding base for course grades or completion state. build_progress still needs a tidy

9/2/17

Working on the course completion enabled status case. Bootstrap progress bar currently within method. to abstract

Working proof of grades case with progress bar that is same but diff variables to completion case

10/2/17

Fixed issue with grade instance fetching

14/2/17

Added core grid and list view functionality

Added settings for max courses in row of grid format and fixed JS issue

15/2/17

Removed max grid row limit as conflicts with other calculations

6/3/17

Fixing Travis issues

Removed behat till I can learn it

Added JQuery to make all divs as tall as tallest item