@@ -40,3 +40,6 @@ script:
   - moodle-plugin-ci shifter
   - moodle-plugin-ci phpunit
   - moodle-plugin-ci behat
+
+notifications:
+  slack: learningworks-dev:tL8lF2CKqNGY6rdtxKhaXIiy
