@@ -1,1 +1,2 @@
 Responsiveness of grid items at lower screen resolutions
+Responsiveness of list items at >800px
