@@ -19,11 +19,12 @@
  *
  * @package    block_my_courses
  * @copyright  1999 onwards Martin Dougiamas (http://dougiamas.com)
+ * @copyright  2017 Mathew May <mathewm@hotmail.co.nz>
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2017021500;        // The current plugin version (Date: YYYYMMDDXX).
+$plugin->version   = 2017030800;        // The current plugin version (Date: YYYYMMDDXX).
 $plugin->requires  = 2016051900;        // Requires this Moodle version.
 $plugin->component = 'block_my_courses'; // Full name of the plugin (used for diagnostics).
