@@ -45,3 +45,9 @@ Fixing Travis issues
 Removed behat till I can learn it
 
 Added JQuery to make all divs as tall as tallest item
+
+8/3/17
+
+Embedded course image fix
+
+Responsiveness of both Grid and List layouts
